force-app/main/default/objects/RE_MY_CostPrice__c/RE_MY_CostPrice__c.object-meta.xml
<CustomObject>
    <label>Cost Price</label>
    <nameField>
        <displayFormat>RE-MY-C{000000}</displayFormat>
        <label>Costing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Price</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>