force-app/main/default/objects/RE_MY_CostPrice__c/fields/Covamo_Admin_Setup__c.field-meta.xml
<CustomField>
    <fullName>Covamo_Admin_Setup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Covamo Admin Setup</label>
    <referenceTo>Covamo_Admin_Setup__c</referenceTo>
    <relationshipLabel>Cost Price - Malaysia</relationshipLabel>
    <relationshipName>Cost_Price_Malaysia</relationshipName>
    <type>Lookup</type>
</CustomField>