force-app/main/default/objects/RE_MY_CostPrice__c/fields/Covamo_MOPS__c.field-meta.xml
<CustomField>
    <fullName>Covamo_MOPS__c</fullName>
    <formula>RE_Hydrocarbon_Value__c  +  ((RE_Bio_Cost__c/100) * 158.9873)/ Covamo_Admin_Setup__r.Exchange_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Covamo MOPS</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>