force-app/main/default/objects/RE_MY_CostPrice__c/fields/HCV_UoM__c.field-meta.xml
<CustomField>
    <fullName>HCV_UoM__c</fullName>
    <formula>IF( RecordType.Name = &apos;Covamo Malaysia&apos;, &apos;USD/BBL&apos; , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HCV UoM</label>
    <type>Text</type>
</CustomField>