force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_Blend_Percent__c.field-meta.xml
<CustomField>
    <fullName>RE_Blend_Percent__c</fullName>
    <label>Blend %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>