force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_CND_CanadianDailyRack_Location__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_CanadianDailyRack_Location__c</fullName>
    <label>CanadianDailyRack Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>