force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_CND_DEX_product_code__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_DEX_product_code__c</fullName>
    <label>DEX product code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>