force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_CND_DEX_Products__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_DEX_Products__c</fullName>
    <label>DEX Products</label>
    <length>20</length>
    <type>Text</type>
</CustomField>