force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_CND_Differential_Basis__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Differential_Basis__c</fullName>
    <description>Basis of net Moves</description>
    <label>Differential Basis</label>
    <length>150</length>
    <type>Text</type>
</CustomField>