force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_CND_Effective_From_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Effective_From_Date__c</fullName>
    <label>Effective From Date</label>
    <type>Date</type>
</CustomField>