force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_CND_Final_Value_Percentage__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Final_Value_Percentage__c</fullName>
    <formula>RE_CND_Final_Value__c /100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Value Percentage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>