force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_CND_PA_loc_code__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_PA_loc_code__c</fullName>
    <label>PA loc code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>