force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_CND_Pricing_Basis__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Pricing_Basis__c</fullName>
    <label>Pricing Basis</label>
    <length>100</length>
    <type>Text</type>
</CustomField>