force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_CND_Product_Differential__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Product_Differential__c</fullName>
    <label>Product Differential</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>