force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_CND_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Product_Name__c</fullName>
    <formula>RE_Product_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>