force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_CND_Required_CanadianDailyRack__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Required_CanadianDailyRack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required CanadianDailyRack?</label>
    <type>Checkbox</type>
</CustomField>