force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_CND_Supplier3_Price__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Supplier3_Price__c</fullName>
    <description>Revolution Canada Competitor Valero Price</description>
    <label>Valero</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>