force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_CND_Supplier4_Difference__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_Supplier4_Difference__c</fullName>
    <formula>IF(RE_CND_Supplier4_Price__c &gt;0, RE_CND_Final_Value__c -  RE_CND_Supplier4_Price__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff of Parkland</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>