force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_Costprice_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_Costprice_Unit__c</fullName>
    <label>Cost Price Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RE_Rate_Unit_Set</valueSetName>
    </valueSet>
</CustomField>