force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_Data__c.field-meta.xml
<CustomField>
    <fullName>RE_Data__c</fullName>
    <label>Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>