force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_Depot_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Depot_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depot Name</label>
    <referenceTo>RE_Location__c</referenceTo>
    <relationshipName>Costing</relationshipName>
    <type>Lookup</type>
</CustomField>