force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_Fx_Rate__c.field-meta.xml
<CustomField>
    <fullName>RE_Fx_Rate__c</fullName>
    <description>Fx Rate used for price calculation</description>
    <label>Fx Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>