force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_Initial_Version__c.field-meta.xml
<CustomField>
    <fullName>RE_Initial_Version__c</fullName>
    <description>To store the Name field value for the initial version records for grouping purpose</description>
    <label>Initial Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>