force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_Oil_Loss__c.field-meta.xml
<CustomField>
    <fullName>RE_Oil_Loss__c</fullName>
    <label>Oil Loss</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>