force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_PH_Is_Blend__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_Is_Blend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Blend</label>
    <type>Checkbox</type>
</CustomField>