force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_PH_MISC_Fuel_Marking_Fee__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_MISC_Fuel_Marking_Fee__c</fullName>
    <label>MISC - Fuel Marking Fee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>