force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_PH_MISC_Hosehandling_Cost__c.field-meta.xml
<CustomField>
    <fullName>RE_PH_MISC_Hosehandling_Cost__c</fullName>
    <label>MISC - Hosehandling Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>