force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_Requested_Date__c</fullName>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>