force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_Submitter_Comments__c.field-meta.xml
<CustomField>
    <fullName>RE_Submitter_Comments__c</fullName>
    <label>Submitter Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>