force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_Transfer_Price_Premium__c.field-meta.xml
<CustomField>
    <fullName>RE_Transfer_Price_Premium__c</fullName>
    <label>Transfer Price Premium</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>