force-app/main/default/objects/RE_MY_CostPrice__c/fields/RE_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D-1</fullName>
            </value>
            <value>
                <fullName>D-2</fullName>
            </value>
            <value>
                <fullName>MTD</fullName>
            </value>
            <value>
                <fullName>WTD</fullName>
            </value>
            <value>
                <fullName>W-1</fullName>
            </value>
            <value>
                <fullName>W-2</fullName>
            </value>
            <value>
                <fullName>M-1</fullName>
            </value>
            <value>
                <fullName>M-2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>