force-app/main/default/objects/RE_MY_CostPrice__c/recordTypes/Canada.recordType-meta.xml
<RecordType>
    <fullName>Canada</fullName>
    <active>true</active>
    <label>Canada</label>
</RecordType>