force-app/main/default/objects/RE_MY_CostPrice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RE_Costprice_Laid_Down_Cost__c</columns>
    <columns>RE_Costprice_Marginal_Cost__c</columns>
    <columns>RE_IsLatest__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RE_Additive_Cost__c</columns>
    <columns>RE_Market_Premium__c</columns>
    <columns>RE_Oil_Loss__c</columns>
    <columns>RE_Bio_Cost__c</columns>
    <columns>RE_Depot_Name__c</columns>
    <columns>RE_Product_Name__c</columns>
    <columns>RE_Pricing_Date__c</columns>
    <columns>RE_Country__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RE_Marketing_Selling_Tariff__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_MY_CostPrice__c.Malaysia</value>
    </filters>
    <label>All</label>
</ListView>