force-app/main/default/objects/RE_MY_CostPrice__c/listViews/All_SOM.listView-meta.xml
<ListView>
    <fullName>All_SOM</fullName>
    <columns>NAME</columns>
    <columns>RE_Product_Name__c</columns>
    <columns>RE_Depot_Name__c</columns>
    <columns>RE_Primary_Transport_Cost__c</columns>
    <columns>RE_Marketing_Selling_Tariff__c</columns>
    <columns>RE_Costprice_Marginal_Cost__c</columns>
    <columns>RE_Costprice_Laid_Down_Cost__c</columns>
    <columns>RE_Hydrocarbon_Value__c</columns>
    <columns>RE_IsLatest__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>RE_Bio_Cost__c</columns>
    <columns>RE_Recovery_Sales_Tax__c</columns>
    <columns>RE_Oil_Loss__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RE_Country__c</field>
        <operation>equals</operation>
        <value>Malaysia</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All (SOM)</label>
</ListView>