force-app/main/default/objects/RE_MY_CostPrice__c/listViews/Canada_Cost_Price.listView-meta.xml
<ListView>
    <fullName>Canada_Cost_Price</fullName>
    <columns>NAME</columns>
    <columns>RE_CND_Effective_From_Date__c</columns>
    <columns>RE_CND_Rack__c</columns>
    <columns>RE_CND_Old_Base_Value__c</columns>
    <columns>RE_CND_Market_Move__c</columns>
    <columns>RE_CND_New_Base_Value__c</columns>
    <columns>RE_Product_Codes__c</columns>
    <columns>RE_Depot_Code__c</columns>
    <columns>RE_CND_Product_Group__c</columns>
    <columns>RE_CND_Group__c</columns>
    <columns>RE_CND_Differential_Basis__c</columns>
    <columns>RE_CND_Pricing_Basis__c</columns>
    <columns>RE_CND_Final_Value__c</columns>
    <columns>RE_IsLatest__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_MY_CostPrice__c.Canada</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Canada Cost Price</label>
    <sharedTo>
        <territoryAndSubordinates>Revolution_Territory.Canada</territoryAndSubordinates>
    </sharedTo>
</ListView>