force-app/main/default/objects/RE_MY_CostPrice__c/listViews/Copy_of_All_SOM.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_SOM</fullName>
    <columns>NAME</columns>
    <columns>RE_Product_Name__c</columns>
    <columns>RE_Depot_Name__c</columns>
    <columns>RE_Costprice_Marginal_Cost__c</columns>
    <columns>RE_Costprice_Laid_Down_Cost__c</columns>
    <columns>RE_Hydrocarbon_Value__c</columns>
    <columns>RE_IsLatest__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RE_Pricing_Date__c</columns>
    <columns>RE_Bio_Cost__c</columns>
    <columns>RE_Freight_Pipeline_Charges__c</columns>
    <columns>RE_Oil_Loss__c</columns>
    <columns>RE_Primary_Transport_Cost__c</columns>
    <columns>RE_Storage_Handling_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_MY_CostPrice__c.Malaysia</value>
    </filters>
    <label>Copy of All (SOM)</label>
</ListView>