force-app/main/default/objects/RE_MY_CostPrice__c/listViews/Covamo_Malaysia.listView-meta.xml
<ListView>
    <fullName>Covamo_Malaysia</fullName>
    <columns>NAME</columns>
    <columns>RE_Product_Name__c</columns>
    <columns>RE_Depot_Name__c</columns>
    <columns>RE_Hydrocarbon_Value__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RE_Bio_Cost__c</columns>
    <columns>RE_Freight_Pipeline_Charges__c</columns>
    <columns>RE_Oil_Loss__c</columns>
    <columns>RE_Primary_Transport_Cost__c</columns>
    <columns>RE_Storage_Handling_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RE_MY_CostPrice__c.Covamo_Malaysia</value>
    </filters>
    <filters>
        <field>RE_Product_Name__c</field>
        <operation>equals</operation>
        <value>Gasoil B0 0.001% S</value>
    </filters>
    <label>Covamo Malaysia</label>
</ListView>